@@ -1,7 +1,12 @@
 
+2016-07-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* cobc.c, cobc.h, tree.c, typeck.c: removed COBC_DUMP_ABORT as it did not
+	  work as intended (fixing compiler warnings because of return not reached)
+
 2016-07-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
-	* error.c , cobc.h: new function cb_perror for returning system errors
+	* error.c, cobc.h: new function cb_perror for returning system errors
 	* error.c (print_error): changes for cb_perror
 	* cobc.c (cobc_terminate), config.c (cb_load_conf_file), pplex.l (ppcopy):
 	  use cb_perror instead of output of a guessed error message
